--- a/ELE.web/WebRoot/gui/forms/registroNovedadesHabilidad.jspx
+++ b/ELE.web/WebRoot/gui/forms/registroNovedadesHabilidad.jspx
@@ -19,9 +19,10 @@
 					var="etiquetas" />
 			</head>
 			<body bgcolor="#DFDFDF">
+				<!-- 
 				<div align="center">
 					<jsp:directive.include file="../general/Encabezado.jsp" />
-				</div>
+				</div>-->
 				<ice:form>
 					<div align="center">
 						<table cellpadding="0" cellspacing="0" width="824" border="0">
