Se modifica logica de generacion de reporte de novedades aplicadas, se cambia columna <fecha corte> por <regional> en el reporte final, se modifica la consulta respectiva en la clase delegada.

--- a/ELE.web/WebRoot/gui/estilos/elec.css
+++ b/ELE.web/WebRoot/gui/estilos/elec.css
@@ -43,6 +43,10 @@ h3 {
 	font-size: 12px;
 	color: #ffffff;
 }
+
+left
+
+
 TR.campoGral {
 	FONT-WEIGHT: normal; FONT-SIZE: 11px; 
 	COLOR: #003333; 
@@ -116,4 +120,9 @@ table.registroVotantes td,table.registroVotantes th {
 
 td {
 height: 500px;
+}
+
+.iceMnuBarVrtSubMenu {
+	left: 157px !important;
+    top: 28px !important;
 }
