--- a/ELE.web/WebRoot/gui/forms/resumenNovedades.jspx
+++ b/ELE.web/WebRoot/gui/forms/resumenNovedades.jspx
@@ -38,10 +38,17 @@
 									<jsp:directive.include file="../general/menu.jsp" />
 
 								</td>
+								
 
 								<td align="center" style="background: white; width: 706px;"
 									height="300">
 
+								
+									<h3>
+										<ice:outputText value="RESUMEN DE NOVEDADES"/>
+									</h3>
+
+								
 
 									<table border="1">
 										<tr align="left">
