--- a/ELE.web/WebRoot/gui/forms/inicioAdmHabilidad.jspx
+++ b/ELE.web/WebRoot/gui/forms/inicioAdmHabilidad.jspx
@@ -7,53 +7,48 @@
 		pageEncoding="ISO-8859-1" />
 	<f:view>
 		<html>
-			<head>
-				<title>Software Administraci&#243;n de Planchas e inhabilidades - Bienvenida</title>
+<head>
+<title>Software Administraci&#243;n de Planchas e inhabilidades
+	- Bienvenida</title>
 
-				<link rel="stylesheet" type="text/css"
-					href="../estilos/rime/rime-portlet.css" />
-				<link rel="stylesheet" type="text/css"
-					href="../estilos/estiloPlanchas.css" />
-				<meta http-equiv="Cache-Control" content="no-cache"/>
-				<f:loadBundle basename="co.com.coomeva.ele.etiquetas.etiquetas"
-					var="etiquetas" />
-			</head>
-			<body bgcolor="#DFDFDF">
+<link rel="stylesheet" type="text/css"
+	href="../estilos/rime/rime-portlet.css" />
+<link rel="stylesheet" type="text/css"
+	href="../estilos/estiloPlanchas.css" />
+<meta http-equiv="Cache-Control" content="no-cache" />
+<f:loadBundle basename="co.com.coomeva.ele.etiquetas.etiquetas"
+	var="etiquetas" />
+</head>
+<body bgcolor="#DFDFDF">
 
-				<ice:form partialSubmit="true">
-					<div align="center">
-						<table cellpadding="0" cellspacing="0" width="824">
-							<tr>
-								<td colspan="2">
-									<div align="left" class="bannerHabilidad"></div>
-								</td>
-							</tr>
-							<tr>
-								<td  align="left" valign="top"
-									bgcolor="#FFFFFF" style="width: 130px">
-									<br />
-									<br />
-									<jsp:directive.include file="../general/menu.jsp" />
+	<ice:form partialSubmit="true">
+		<div align="center">
+			<table cellpadding="0" cellspacing="0" width="824">
+				<tr>
+					<td colspan="2">
+						<div align="left" class="bannerHabilidad"></div>
+					</td>
+				</tr>
+				<tr>
+					<td align="left" valign="top" bgcolor="#FFFFFF"
+						style="width: 130px"><br /> <br /> <jsp:directive.include
+							file="../general/menu.jsp" /></td>
 
-								</td>
+					<td align="center" style="background: white; width: 706px;"
+						height="400" valign="top"><br /> <br />
+						<h3>
+							<ice:outputText value="#{etiquetas.saludoAdmHabilidad}"
+								style="width = 300;" />
+						</h3></td>
+				</tr>
+			</table>
 
-								<td align="center" style="background: white; width: 706px;" height="400" valign="top" >
-									<br />
-									<br />
-									<h3>
-										<ice:outputText value="#{etiquetas.saludoAdmHabilidad}" style="width = 300;"/>
-									</h3>
 
-								</td>
-							</tr>
-						</table>
-						
+			<jsp:directive.include file="../popup/popupMensajeExcepcion.jsp" />
+		</div>
+	</ice:form>
 
-						<jsp:directive.include file="../popup/popupMensajeExcepcion.jsp" />
-					</div>
-				</ice:form>
-
-			</body>
+</body>
 		</html>
 	</f:view>
 </jsp:root>
