--- a/ELE.web/WebRoot/gui/forms/crearPlancha.jspx
+++ b/ELE.web/WebRoot/gui/forms/crearPlancha.jspx
@@ -22,27 +22,23 @@
 	var="etiquetas" />
 </head>
 <body bgcolor="#DFDFDF">
-
-
-
 	<ice:form partialSubmit="true">
 		<div align="center">
-
 			<table cellpadding="0" cellspacing="0" width="824">
-			
 				<tr>
 					<td colspan="2">
 						<div align="left" class="banner"></div>
 					</td>
 				</tr>
 				<tr>
-					<td width="130" align="left" valign="top" bgcolor="#ABD673"><br />
-						<br /></td>
-
-					<td align="center" style="background: white; width: 706px;"><br />
-						<br />
+					<td align="center" style="background: white; width: 706px;"><jsp:directive.include
+							file="../planchas/menuPlanchasAsociado.jsp" /></td>
+				</tr>
+				<tr>
+					<td align="center" style="background: white; width: 706px;">
 						<table border="2" width="500 px">
 							<tr>
+
 								<td colspan="2" valign="top" align="center">
 									<table border="1" style="width: 100%">
 										<tr>
@@ -240,7 +236,8 @@
 							value="#{etiquetas.lblBtnVerificar}"
 							action="#{crearPlanchaVista.action_Verificar}" /> <ice:commandButton
 							value="#{etiquetas.lblVolver}"
-							action="#{crearPlanchaVista.action_Volver}" /></td>
+							action="#{crearPlanchaVista.action_Volver}" />
+					</td>
 				</tr>
 			</table>
 			<jsp:directive.include file="../popup/popupSubirFoto.jsp" />
