--- a/ELE.web/WebRoot/gui/forms/consultaHabilidadAsociados.jspx
+++ b/ELE.web/WebRoot/gui/forms/consultaHabilidadAsociados.jspx
@@ -7,125 +7,110 @@
 		pageEncoding="ISO-8859-1" />
 	<f:view>
 		<html>
-			<head>
-				<title>Software de Inscripci&#243;n de Planchas - Consulta Asociados Habiles</title>
-				<script type="text/javascript" src="../js/servletInvoker.js"></script>
-				<link rel="stylesheet" type="text/css"
-					href="../estilos/rime/rime-portlet.css" />
-				<link rel="stylesheet" type="text/css"
-					href="../estilos/estiloPlanchas.css" />
-				<meta http-equiv="Cache-Control" content="no-cache"/>
-				<f:loadBundle basename="co.com.coomeva.ele.etiquetas.etiquetas"
-					var="etiquetas" />
-			</head>
-			<body bgcolor="#DFDFDF">
+<head>
+<title>Software de Inscripci&#243;n de Planchas - Consulta
+	Asociados Habiles</title>
+<script type="text/javascript" src="../js/servletInvoker.js"></script>
+<link rel="stylesheet" type="text/css"
+	href="../estilos/rime/rime-portlet.css" />
+<link rel="stylesheet" type="text/css"
+	href="../estilos/estiloPlanchas.css" />
+<meta http-equiv="Cache-Control" content="no-cache" />
+<f:loadBundle basename="co.com.coomeva.ele.etiquetas.etiquetas"
+	var="etiquetas" />
+</head>
+<body bgcolor="#DFDFDF">
+	<ice:form partialSubmit="true">
+		<div align="center">
+			<table cellpadding="0" cellspacing="0" width="824">
+				<tr>
+					<td colspan="2">
+						<div align="left" class="banner"></div>
+					</td>
+				</tr>
+				<tr>
+					<td align="left" valign="top" bgcolor="#FFFFFF" width="130"><br />
+						<br /> <jsp:directive.include file="../general/menu.jsp" /></td>
 
+					<td align="center" style="background: white; width: 706px;"
+						height="300">
 
-
-				<ice:form partialSubmit="true">
-					<div align="center">
-						<table cellpadding="0" cellspacing="0" width="824">
-							<tr>
-								<td colspan="2">
-									<div align="left" class="banner"></div>
+						<table border="1">
+							<tr align="left">
+								<td class="formularioTabla"><ice:outputText
+										value="#{etiquetas.lblreporteNumeroDocumento}" /></td>
+								<td><ice:inputText
+										binding="#{consultaHabilidadAsociadosVista.txtNumeroDocumento}" />
 								</td>
 							</tr>
-							<tr>
-								<td align="left" valign="top" bgcolor="#FFFFFF" width="130">
-									<br />
-									<br />
-									
-									<jsp:directive.include file="../general/menu.jsp" />
-
-								</td>
-
-								<td align="center" style="background: white; width: 706px;"
-									height="300">
-									
-									<table border="1">
-										<tr align="left">
-											<td class="formularioTabla">
-												<ice:outputText value="#{etiquetas.lblreporteNumeroDocumento}" />
-											</td>
-											<td>
-												<ice:inputText binding="#{consultaHabilidadAsociadosVista.txtNumeroDocumento}"/>
-											</td>
-										</tr>	
-										<tr align="left">
-											<td class="formularioTabla">
-												<ice:outputText value="#{etiquetas.lblZonaElectoral}" />
-											</td>
-											<td>
-												<ice:selectOneMenu binding="#{consultaHabilidadAsociadosVista.txtZona}">
-													<f:selectItems value="#{consultaHabilidadAsociadosVista.lasZonas}"/>
-												</ice:selectOneMenu>
-											</td>
-										</tr>
-										<tr align="left">
-											<td class="formularioTabla">
-												<ice:outputText value="#{etiquetas.lblreporteProfesion}" />
-											</td>
-											<td>
-												<ice:panelGrid columns="2">
-													<ice:panelGroup>
-														<ice:panelGrid columns="2">
-															<ice:outputText value="#{etiquetas.lblCodigoCol}" />
-															<ice:outputText value="#{etiquetas.lblNombre}" />
-															<ice:inputText binding="#{consultaHabilidadAsociadosVista.txtCodProfesion}"/>
-															<ice:inputText binding="#{consultaHabilidadAsociadosVista.txtProfesion}"/>
-														</ice:panelGrid>
-													</ice:panelGroup>
-													<ice:panelGroup>
-														<ice:panelGrid columns="2">
-															<ice:commandButton binding="#{consultaHabilidadAsociadosVista.btnConsultarProfesion}"
-																value="Consultar"
-																action="#{consultaHabilidadAsociadosVista.action_seleccionarProfesion}" />
-															<ice:commandButton binding="#{consultaHabilidadAsociadosVista.btnLimpiarProfesion}"
-																action="#{consultaHabilidadAsociadosVista.action_limpiarProfesion}"
-																value="Limpiar" />
-														</ice:panelGrid>
-													</ice:panelGroup>
-												</ice:panelGrid>
-											</td>
-										</tr>	
-										<tr align="left">
-											<td class="formularioTabla">
-												<ice:outputText value="#{etiquetas.lblTipoReporte}" />
-											</td>
-											<td>
-												<ice:selectOneRadio binding="#{consultaHabilidadAsociadosVista.txtTipoReporte}">
-													<f:selectItems value="#{consultaHabilidadAsociadosVista.losTipoReportes}"/>
-												</ice:selectOneRadio>
-											</td>
-										</tr>									
-
-									</table>
-									<br />
-
-									<ice:commandButton value="Consultar"
-										action="#{consultaHabilidadAsociadosVista.action_consultar}"
-										actionListener="#{consultaHabilidadAsociadosVista.listener_generarParametrosReportes}" />
-
-									<ice:commandButton binding="#{consultaHabilidadAsociadosVista.btnLimpiar}"
-										action="#{consultaHabilidadAsociadosVista.action_limpiar}"
-										value="Limpiar" />
-										
-									<ice:commandButton binding="#{consultaHabilidadAsociadosVista.btnGenerarReporte}"
-										value="#{etiquetas.lblBtnGenrarReporte}"
-										onclick="ServletReportesHabilidadesWeb();" 
-										disabled="true"/>
-										
-								</td>
+							<tr align="left">
+								<td class="formularioTabla"><ice:outputText
+										value="#{etiquetas.lblZonaElectoral}" /></td>
+								<td><ice:selectOneMenu
+										binding="#{consultaHabilidadAsociadosVista.txtZona}">
+										<f:selectItems
+											value="#{consultaHabilidadAsociadosVista.lasZonas}" />
+									</ice:selectOneMenu></td>
 							</tr>
-						</table>
-						<jsp:directive.include
-							file="../popup/popupProfesiones.jsp" />
-						<jsp:directive.include
-							file="../popup/popupMensajeExcepcion.jsp" />
-					</div>
-				</ice:form>
+							<tr align="left">
+								<td class="formularioTabla"><ice:outputText
+										value="#{etiquetas.lblreporteProfesion}" /></td>
+								<td><ice:panelGrid columns="2">
+										<ice:panelGroup>
+											<ice:panelGrid columns="2">
+												<ice:outputText value="#{etiquetas.lblCodigoCol}" />
+												<ice:outputText value="#{etiquetas.lblNombre}" />
+												<ice:inputText
+													binding="#{consultaHabilidadAsociadosVista.txtCodProfesion}" />
+												<ice:inputText
+													binding="#{consultaHabilidadAsociadosVista.txtProfesion}" />
+											</ice:panelGrid>
+										</ice:panelGroup>
+										<ice:panelGroup>
+											<ice:panelGrid columns="2">
+												<ice:commandButton
+													binding="#{consultaHabilidadAsociadosVista.btnConsultarProfesion}"
+													value="Consultar"
+													action="#{consultaHabilidadAsociadosVista.action_seleccionarProfesion}" />
+												<ice:commandButton
+													binding="#{consultaHabilidadAsociadosVista.btnLimpiarProfesion}"
+													action="#{consultaHabilidadAsociadosVista.action_limpiarProfesion}"
+													value="Limpiar" />
+											</ice:panelGrid>
+										</ice:panelGroup>
+									</ice:panelGrid></td>
+							</tr>
+							<tr align="left">
+								<td class="formularioTabla"><ice:outputText
+										value="#{etiquetas.lblTipoReporte}" /></td>
+								<td><ice:selectOneRadio
+										binding="#{consultaHabilidadAsociadosVista.txtTipoReporte}">
+										<f:selectItems
+											value="#{consultaHabilidadAsociadosVista.losTipoReportes}" />
+									</ice:selectOneRadio></td>
+							</tr>
 
-			</body>
+						</table> <br /> <ice:commandButton value="Consultar"
+							action="#{consultaHabilidadAsociadosVista.action_consultar}"
+							actionListener="#{consultaHabilidadAsociadosVista.listener_generarParametrosReportes}" />
+
+						<ice:commandButton
+							binding="#{consultaHabilidadAsociadosVista.btnLimpiar}"
+							action="#{consultaHabilidadAsociadosVista.action_limpiar}"
+							value="Limpiar" /> <ice:commandButton
+							binding="#{consultaHabilidadAsociadosVista.btnGenerarReporte}"
+							value="#{etiquetas.lblBtnGenrarReporte}"
+							onclick="ServletReportesHabilidadesWeb();" disabled="true" />
+
+					</td>
+				</tr>
+			</table>
+			<jsp:directive.include file="../popup/popupProfesiones.jsp" />
+			<jsp:directive.include file="../popup/popupMensajeExcepcion.jsp" />
+		</div>
+	</ice:form>
+
+</body>
 		</html>
 	</f:view>
 </jsp:root>
